# real-time-operating-systems

./: .gitignore  README.md  brief
.cache/clangd/index/: adc.c.FC341999BF616051.idx  adc.h.44D4FCC64B2881CF.idx  http_server.c.F56B3AED02DFF00B.idx  http_server.h.FED7746D421D2234.idx  led.c.A60F4D44A345DAC8.idx  led.h.A4B765868E18CFD6.idx  main.c.E640A5A6F025C5DA.idx  rgb_led.c.8546BFE21BD37AB3.idx  rgb_led.h.7ECC31E73C4DDC9E.idx  tasks_common.h.0448EF5D565B8C8B.idx  thermistor.c.81DFCC9579F13756.idx  thermistor.h.5EBB5C9FD3B0207A.idx  uart.c.3FDE5359B73BEAF4.idx  uart.h.A38BBC40B0DD2869.idx  wifi_app.c.8B4CDD1031B13DE7.idx  wifi_app.h.19E39B58FDD64FAB.idx
components/: adc.c  adc.h  http_server.c  led.c  led.h  rgb_led.c  rgb_led.h  thermistor.c  thermistor.h  uart.c  uart.h  wifi_app.c  wifi_app.h
components/led/: led.c  led.h
main/: CMakeLists.txt  main.c  test.c
webpage/: app.css  app.js  index.html
